--- a/banktf.html
+++ b/banktf.html
@@ -320,17 +320,17 @@
         <br>
 
         <p>Account Number</p>
-        <h3 id="accountNumberToCopy"> 6103344205 </h3>
+        <h3 id="accountNumberToCopy"> 9050163849 </h3>
         <button class="copy-button" onclick="copyText('accountNumberToCopy')">Copy</button>
         <br>
 
         <p>Bank Name</p>
-        <h3>OPAY </h3> <br>
+        <h3>PALMPAY </h3> <br>
 
         
 
         <p>Account Name</p>
-        <h3>DARK WEBSITE</h3> <br> <hr> <br>
+        <h3>PROMISE UKALABUCHI</h3> <br> <hr> <br>
         <p>Pay to this specific account and get your account your account code </p> <br>
         <div class="btn">
             <button id="transferButton" onclick="startTransfer()">I have made this bank Transfer</button> <br> 
